Implement initial E2E